# raytracing_project

./: .gitignore  Cargo.toml  README.md  desc.scene  img.ppm
.github/workflows/: run.yml
raytracer/: Cargo.toml
raytracer/src/: camera.rs  color.rs  intersectable.rs  lib.rs  mat44.rs  material.rs  math.rs  plan.rs  plane.rs  ray.rs  sphere.rs  utils.rs  vec3.rs
raytracer/src/hittable/: aabb.rs  bhv.rs  mod.rs  operation.rs  plane.rs  rect.rs  sphere.rs  triangle.rs
raytracer/src/material/: dielectric.rs  lambertian.rs  light.rs  metal.rs  mod.rs  utils.rs
raytracer/src/texture/: checker.rs  image.rs  mod.rs  perlin.rs  solid.rs
raytracer_cli/: Cargo.toml
raytracer_cli/shaders/: shader.frag  shader.vert
raytracer_cli/src/: default_scene.rs  grammar.lalrpop  gui.rs  image.rs  main.rs  obj.rs  pixel_data.rs
raytracer_cli/src/scene_description/: builder.rs  creators.rs  mod.rs
