[package]
name = "raytracer_cli"
version = "0.1.0"
authors = ["Paul Cacheux <paulcacheux@gmail.com>"]
edition = "2018"

[build-dependencies.lalrpop]
version = "0.18"
features = ["lexer"]

[dependencies]
raytracer = { path = "../raytracer" }
threadpool = "1.7"
png = "0.16"
rand = "0.7"
regex = "1.3"
lazy_static = "1.4"
maplit = "1.0"
clap = "2.33"
indicatif = "0.14"

[dependencies.lalrpop-util]
version = "0.18"
features = ["lexer"]
