[package]
name = "raytracer_cli"
version = "0.1.0"
authors = ["Paul Cacheux <paulcacheux@gmail.com>"]
edition = "2018"

[dependencies]
raytracer = { path = "../raytracer" }
threadpool = "1.7"
rand = "0.7"
lazy_static = "1.4"
maplit = "1.0"
clap = "2.33"
indicatif = "0.14"
image = "0.23"
tobj = "1.0"
