[package]
name = "raytracer_cli"
version = "0.1.0"
authors = ["Paul Cacheux <paulcacheux@gmail.com>"]
edition = "2018"

[features]
default = ["gui"]
gui = ["wgpu", "winit", "shaderc", "zerocopy"]

[dependencies]
raytracer = { path = "../raytracer" }
threadpool = "1.7"
rand = "0.7"
lazy_static = "1.4"
maplit = "1.0"
clap = "2.33"
indicatif = "0.14"
image = "0.23"
tobj = "1.0"
itertools = "0.9"
futures = "0.3"
env_logger = "0.7"
log = "0.4"
wgpu = { version = "0.5", optional = true }
winit = { version = "0.22", optional = true }
shaderc = { version = "0.6", optional = true }
zerocopy = { version = "0.3", optional = true }
